Revert "DCS-890 Fix high severity security advisory (Pug) GHSA-p493-635q-r6gr (#1267)"
This reverts commit fb4082eeb14c97341b3eba7ddd22c0a2c103ea76.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
       "files": ["**/*.ts"],
       "extends": [
         "airbnb-typescript/base",
+        "prettier/@typescript-eslint",
         "plugin:prettier/recommended"
       ],
       "parserOptions": {
