--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "case": "^1.6.3",
     "compression": "^1.7.4",
     "concat-stream": "^2.0.0",
-    "config": "3.3.4",
+    "config": "3.3.3",
     "connect-flash": "^0.1.1",
     "connect-redis": "5.1.0",
     "cookie-parser": "^1.4.5",
@@ -118,7 +118,7 @@
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "knex": "0.21.19",
+    "knex": "0.21.17",
     "knex-migrate": "^1.7.4",
     "moment": "2.29.1",
     "moment-business-days": "^1.2.0",
@@ -131,8 +131,8 @@
     "pg": "8.5.1",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
-    "pug": ">=3.0.2",
-    "puppeteer": "^8.0.0",
+    "pug": "^3.0.0",
+    "puppeteer": "^7.1.0",
     "querystring": "^0.2.1",
     "ramda": "^0.27.1",
     "redis": "3.0.2",
@@ -149,29 +149,29 @@
     "@types/jest": "26.0.20",
     "@types/node": "14.14.31",
     "@types/puppeteer": "^5.4.3",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "concurrently": "^6.0.0",
-    "eslint": "7.21.0",
+    "eslint": "7.20.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "7.2.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.1.3",
+    "husky": "^5.1.0",
     "jest": "26.6.3",
     "jest-html-reporter": "3.3.0",
     "jest-junit": "^12.0.0",
     "lint-staged": "10.5.4",
-    "nock": "13.0.10",
+    "nock": "13.0.7",
     "node-sass": "^5.0.0",
     "nodemon": "2.0.7",
     "pdf-parse": "^1.1.1",
     "prettier": "2.2.1",
     "supertest": "^6.1.3",
-    "ts-jest": "26.5.2",
-    "typescript": "4.2.2"
+    "ts-jest": "26.5.1",
+    "typescript": "4.1.4"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
