--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "pg": "8.5.1",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
-    "pug": "^3.0.0",
+    "pug": "3.0.2",
     "puppeteer": "^7.1.0",
     "querystring": "^0.2.1",
     "ramda": "^0.27.1",
